--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,16 @@
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
+    font-family: open-sans;
+}
+
+@font-face {
+    font-family: open-sans;
+    src: url('../fonts/open-sans-regular.ttf');
+}
+
+.clear {
+    clear: both;
 }
 
 
@@ -45,6 +55,15 @@
 ---------------------------------------------------------- 
 */
 
+html, body {
+    height: 100%;
+}
+
+.container {
+    max-width: 1280px;
+    margin: 0 auto;
+}
+
 
 
 /* 
@@ -53,6 +72,57 @@
 ---------------------------------------------------------- 
 */
 
+header {
+    width: 100%;
+    height: 90vh;
+    padding: 40px 2%;
+    background-size: cover;
+    background-position: center;
+    background-image: url('../img/capa.png');
+}
+
+header .logo {
+    width: 160px;
+    height: 40px;
+    background-color: #ccc;
+    float: left;
+}
+
+header nav {
+    float: right;
+}
+
+header nav ul {
+    list-style-type: none;
+}
+
+header nav ul li {
+    float: left;
+    padding: 0 15px;
+}
+
+header nav ul li a {
+    color: white;
+    text-decoration: none;
+}
+
+.chamada1 {
+    max-width: 600px;
+    float: right;
+    margin: 140px 110px;
+}
+
+.chamada1 h2 {
+    font-size: 40px;
+    color: white;
+    font-weight: normal;
+}
+
+.chamada1 p {
+    font-size: 15px;
+    color: white;
+    margin-top: 10px;
+}
 
 
 /* 
@@ -61,7 +131,76 @@
 ---------------------------------------------------------- 
 */
 
+section.sessao1 {
+    width: 100%;
+    background-color: #472562;
+    padding: 0px 2%;
+    height: 400px;
+}
 
+section.sessao1 .container {
+    max-width: 1000px;
+}
+
+.texto-sessao1 {
+    width: 50%;
+    float: left;
+    color: white;
+    margin-top: 60px;
+    padding-left: 80px;
+    position: relative;
+    left: 60px;
+}
+
+.texto-sessao1 h2 {
+    font-size: 25px;
+}
+
+.texto-sessao1 p {
+    font-size: 14px;
+    margin-top: 10px;
+}
+
+.texto-sessao1 ul {
+    margin-top: 10px;
+    font-size: 15px;    
+}
+
+.texto-sessao1 ul li {
+    list-style-type: disc;
+    list-style-position: inside;
+    float: left;
+    width: 100%;
+    margin-top: 8px;
+}
+
+.texto-sessao1 .btn-texto1 {
+    background-color: #ff703d;
+    color: white;
+    width: 165px;
+    height: 44px;
+    cursor: pointer;
+    margin-top: 30px;
+    border-radius:30px;
+    text-align: center;
+    line-height: 44px;
+    font-size: 14px;
+}
+
+.texto-sessao1 .btn-texto1:hover {
+    background-color: #e95119;
+}
+
+.device-sessao1 {
+    float: left;
+    width: 50%;
+    height: 450px;
+    position: relative;
+    top: -50px;
+    background-image: url('../img/device.png');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+}
 
 /* 
 ----------------------------------------------------------
@@ -86,6 +225,32 @@
 */
 
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 768px) {
+
+    section.sessao1 {
+       padding: 40px 2%;
+       height: auto;
+       text-align: center;
+    }
+
+    .texto-sessao1 {
+        width: 100%;
+        margin-top: 0;
+        position: static;
+        float: none;
+        display: inline-block;
+    }
+
+    .texto-sessao1 ul li {
+        float: none;
+    }
+
+    .texto-sessao1 .btn-texto1 {
+        display: inline-block;
+    }
+    
+    .device-sessao1 {
+        display: none;
+    }
 
 }
