--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,6 +75,7 @@ html, body {
 header {
     width: 100%;
     height: 90vh;
+    min-height: 800px;
     padding: 40px 2%;
     background-size: cover;
     background-position: center;
@@ -92,16 +93,57 @@ header nav {
     float: right;
 }
 
-header nav ul {
+header nav.mobile-menu {
+    display: none;
+    width: 32px;
+    height: 32px;
+    background-image: url(../img/menu.png);
+    background-size: 100% 100%;
+    cursor: pointer;
+}
+
+header nav.mobile-menu:hover ul {
+    display: block;
+    opacity: 1;
+    transition: 1s;
+}
+
+header nav.mobile-menu ul {
+    opacity: 0;
+    position: absolute;
+    width: 100%;
+    left: 0;
+    top: 75px;
+    list-style-type: none;
+    background-color: #472562;
+    text-align: center;
+}
+
+header nav.mobile-menu ul li {
+    border-bottom: 1px solid white;
+    padding: 8px 0;
+    transition: 0.4s;
+}
+
+header nav.mobile-menu ul li:hover {
+    background-color: #391855;
+}
+
+header nav.mobile-menu ul li a {
+    text-decoration: none;
+    color: white;
+}
+
+header nav.desktop-menu ul {
     list-style-type: none;
 }
 
-header nav ul li {
+header nav.desktop-menu ul li {
     float: left;
     padding: 0 15px;
 }
 
-header nav ul li a {
+header nav.desktop-menu ul li a {
     color: white;
     text-decoration: none;
 }
@@ -109,7 +151,7 @@ header nav ul li a {
 .chamada1 {
     max-width: 600px;
     float: right;
-    margin: 140px 110px;
+    margin: 280px 110px;
 }
 
 .chamada1 h2 {
@@ -163,7 +205,7 @@ section.sessao1 .container {
 
 .texto-sessao1 ul {
     margin-top: 10px;
-    font-size: 15px;    
+    font-size: 15px;
 }
 
 .texto-sessao1 ul li {
@@ -196,10 +238,37 @@ section.sessao1 .container {
     width: 50%;
     height: 450px;
     position: relative;
-    top: -50px;
+    top: -55px;
     background-image: url('../img/device.png');
     background-repeat: no-repeat;
     background-size: 100% 100%;
+}
+
+section.sessao2 {
+    padding-left: 2%;
+    padding-right: 2%;
+    background-color: white;
+    text-align: center;
+}
+
+section.sessao2 .container {
+    max-width: 1000px;
+}
+
+section.sessao2 h2 {
+    color: #472663
+}
+
+section.sessao2 p {
+    margin-top: 30px;
+    max-width: 900px;
+    display: inline-block;
+    color: #472663
+}
+
+section.sessao2 img {
+    width: 100%;
+    margin-top: 40px;
 }
 
 /* 
@@ -225,7 +294,48 @@ section.sessao1 .container {
 */
 
 
+@media screen and (max-width: 840px) {
+
+    .chamada1 {
+        max-width: none;
+        width: 100%;
+        float: none;
+        text-align: center;
+        margin: 170px 0;
+    }
+
+    .chamada1 h2 {
+        font-size: 25px;
+        padding: 0 10px;
+    }
+
+    .chamada1 p {
+        margin-top: 25px;
+        font-size: 14px;
+        padding: 0 10px;
+        max-width: 400px;
+        display: inline-block;
+    }
+
+}
+
+
 @media screen and (max-width: 768px) {
+
+    header {
+        width: 100%;
+        height: auto;
+        min-height: 60vh;
+        padding: 40px 2%;
+    }
+
+    header nav.desktop-menu {
+        display: none;
+    }
+
+    header nav.mobile-menu {
+        display: block;
+    }
 
     section.sessao1 {
        padding: 40px 2%;
@@ -236,13 +346,20 @@ section.sessao1 .container {
     .texto-sessao1 {
         width: 100%;
         margin-top: 0;
+        padding-left: 0;
         position: static;
         float: none;
         display: inline-block;
     }
 
+    .texto-sessao1 ul {
+        display: inline-block;
+        margin-top: 20px;
+    }
+
     .texto-sessao1 ul li {
         float: none;
+        text-align: left;
     }
 
     .texto-sessao1 .btn-texto1 {
@@ -251,6 +368,10 @@ section.sessao1 .container {
     
     .device-sessao1 {
         display: none;
+    }
+
+    section.sessao2 {
+        padding-top: 40px;
     }
 
 }
